# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentaatio.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  monopoli.txt  sekvenssikaavio.md  tehtava4.md
src/: index.py  snake.py
src/actions/: actions.py  startmenuactions.py
src/entities/: apples.py  snake.py
src/score/: scorecounter.py
src/screen/: loadgame.py
src/snakemap/: snakemap.py
src/tests/: actions_test.py  apples_test.py  map_test.py  scorecounter_test.py  screen_test.py  snake_test.py  startmenuactions_test.py
